<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/mainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/titleTextView"
        android:textStyle="bold"
        android:text="@string/main_activity_title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/usernameEditText"
        android:layout_marginTop="69dp"
        android:hint="@string/username"
        android:layout_below="@id/titleTextView"
        android:layout_centerHorizontal="true"
        />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/usernameEditText"
        android:id="@+id/passwordEditText"
        />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/mainButton"
        android:layout_height="wrap_content"
        android:text="@string/next"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="69dp"
        android:layout_marginEnd="69dp" />

</RelativeLayout>