<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:id="@+id/welcomeBackActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:id="@+id/welcomeBackTextView"
        android:textStyle="bold"
        android:text="@string/welcome_back"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="169dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:id="@+id/welcomeButton"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_marginRight="69dp"
        android:layout_marginBottom="69dp"
        android:layout_marginEnd="69dp" />

</RelativeLayout>