<resources>
    <string name="app_name">TestingConcepts</string>
    <string name="main_activity_title">Main Activity Title</string>
    <string name="next">NEXT</string>
    <string name="back">BACK</string>
    <string name="username">USERNAME</string>
    <string name="password">PASSWORD</string>
    <string name="logged">LOGGED</string>
    <string name="welcome_back">Welcome Back</string>

</resources>